--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "api-costs",
+  "version": "1.0.0",
+  "private": false,
+  "engines": {
+    "node": "22.x"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "server": "Server.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
